@@ -1,3 +1,9 @@
+Wed May  2 16:41:28 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* acconfig.h: Removed some definitions gettext used to need.
+
+	* Makefile.in (_root): Added ABOUT-NLS to the distribution.
+
 Wed May  2 16:31:21 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* config.guess, config.sub: New files, synced from today's CVS.
